[metadata]
name = tokyo_jpx
version = 0.0.01
author = Gilberto Batres-Estrada
author_email = g.batres.estrada@gmail.com
description = Python module for prediction of stock returns using pytorch. This repo is mainly used for the Tokyo JPX competition.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gilberto-BE/tokyo_jpx
project_urls =
    Bug Tracker = https://github.com/gilberto-BE/tokyo_jpx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src